--- a/recipes/yakisoba.html
+++ b/recipes/yakisoba.html
@@ -8,5 +8,34 @@
 
     <body>
         <h1>Yakisoba Chicken</h1>
+        <img src="../images/yakisoba.png" alt="Yakisoba Chicken" height="300" width="350">
+
+         <h2>Description</h2>
+             <p>
+                Yakisoba is a classic Japanese stir-fried noodle dish that's seasoned with a sweet and savory sauce similar to Worcestershire sauce. <br> Use any proteins you like—pork, chicken, shrimp, or calamari. For vegetarians, just swap it with tofu or shiitake mushrooms.        </p>     </p>
+
+        <h2>Ingredients</h2>
+             <p>
+                <ul>
+                    <li>1/2 teaspoon sesame oil</li>
+                    <li>1 tablespoon canola oil</li>
+                    <li>2 tablespoons chile paste</li>
+                    <li>2 cloves garlic, chopped</li>
+                    <li>4 skinless, boneless chicken breast halves - cut into 1 inch cubes</li>
+                    <li>1/2 cup soy sauce</li>
+                    <li>1 onion, sliced lengthwise into eighths</li>
+                    <li>1/2 medium head cabbage, coarsely chopped</li>
+                    <li>2 carrots, coarsely chopped</li>
+                    <li>8 ounces soba noodles, cooked and drained</li>
+                </ul>
+           </p>
+
+           <h2>Steps</h2>
+           <ol>
+            <li>h</li>
+           </ol>
+    
+
+
     </body>
 </html>
