--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/yakisoba.html" rel="noopener noreferrer">Yakisoba Chicken</a>
+        <ul>
+           <li> <a href="recipes/yakisoba.html" rel="noopener noreferrer">Yakisoba Chicken</a></li>
+           <li> <a href="recipes/bibimbap.html" rel="noopener noreferrer">Bibimbap (Korean Rice with Mixed Vegetables)</a></li>
+
+        
+        </ul>
+        
 
     </body>
 </html>
