--- a/recipes/bibimbap.html
+++ b/recipes/bibimbap.html
@@ -5,10 +5,39 @@
         <title>Bibimbap </title>
     </head>
 
-    <h1>Bibimbap (Korean Rice with Mixed Vegetables)</h1>
-    <img src="../images/bibimbap.png" alt="Bibimbap" height="500" width="600">
-
+   
     <body>
+        <a href="../index.html">Back to Home</a>
+        <h1>Bibimbap (Korean Rice with Mixed Vegetables)</h1>
+        <img src="../images/bibimbap.png" alt="Bibimbap" height="500" width="600">
+        <h1>Description</h1>
+    
+        <p>
+            This bibimbap recipe makes a popular and delicious Korean meal. <br> Meaning mixed rice, bibimbap is a delicious rice bowl topped with vegetables, beef, a whole egg, and gochujang (red chili pepper paste). <br> Traditionally, bibimbap was eaten on the eve of the Lunar New Year, to use up any leftovers before the start of the new year.
+        </p>
+
+        <h2>Ingredients</h2>
+        <ul>
+            <li>1 English cucumber, cut into matchsticks</li>
+            <li>1/2 cup gochujang (Korean hot pepper paste) (Optional)</li>
+            <li>1 bunch fresh spinach, cut into thin strips</li>
+            <li>1 tablespoon soy sauce</li>
+            <li>2 teaspoons olive oil, divided</li>
+            <li>2 carrots, cut into matchsticks</li>
+            <li>1 clove garlic, minced</li>
+            <li>1 pinch red pepper flakes</li>
+            <li>1 pound thinly-sliced beef top round steak</li>
+            <li>4 large eggs</li>
+            <li>4 cups cooked white rice</li>
+            <li>4 teaspoons toasted sesame oil, divided</li>
+            <li>1 teaspoon sesame seeds</li>
+            <li>2 teaspoons gochujang (Korean hot pepper paste), divided (Optional)</li>
+        </ul>
+
+        <h2>Steps</h2>
+        <ol>
+            <li>Stir together cucumber pieces and gochujang paste in a bowl; set aside.</li>
+        </ol>
 
 
     </body>
