added css files and edited the look of this previous project

--- a/recipes/bibimbap.html
+++ b/recipes/bibimbap.html
@@ -3,16 +3,17 @@
     <head>
         <meta charset="UTF-8">
         <title>Bibimbap </title>
+        <link rel="stylesheet" href="styles.css">
     </head>
 
    
     <body>
-        <a href="../index.html">Back to Home</a>
+        <a class="home" href="../index.html">Back to Home</a>
         <h1>Bibimbap (Korean Rice with Mixed Vegetables)</h1>
         <img src="../images/bibimbap.png" alt="Bibimbap" height="500" width="600">
         <h1>Description</h1>
     
-        <p>
+        <p class="description">
             This bibimbap recipe makes a popular and delicious Korean meal. <br> Meaning mixed rice, bibimbap is a delicious rice bowl topped with vegetables, beef, a whole egg, and gochujang (red chili pepper paste). <br> Traditionally, bibimbap was eaten on the eve of the Lunar New Year, to use up any leftovers before the start of the new year.
         </p>
 
@@ -44,6 +45,7 @@
             <li>Brown beef in a clean nonstick skillet over medium heat, about 5 minutes per side; set aside.</li>
             <li>Heat remaining 1 teaspoon olive oil in another nonstick skillet over medium-low heat. Fry eggs just on one side until yolks are runny, but whites are firm, 2 to 4 minutes.</li>
             <li>Divide cooked rice into 4 large serving bowls; top with spinach mixture, a few pieces of beef, and cucumber mixture. Place 1 egg atop each serving. Drizzle each bowl with 1 teaspoon sesame oil, a sprinkle of sesame seeds, and a small amount of gochujang paste if desired.</li>
+            
         </ol>
 
 
