--- a/recipes/fantuan.html
+++ b/recipes/fantuan.html
@@ -3,15 +3,16 @@
     <head>
         <meta charset="UTF-8">
         <title>Fan Tuan (Stuffed Sticky Rice Roll)</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
 
     <body>
-        <a href="../index.html">Back to Home</a>
+        <a class="home" href="../index.html">Back to Home</a>
         <h1>Fan Tuan (Stuffed Sticky Rice Roll)</h1>
         <img src="../images/fantuan.png" alt="Fan Tuan" height="350" width="450">
-        <h2>Description</h2>
+        <h1>Description</h1>
 
-        <p>
+        <p class="description">
             Fan Tuan 飯糰 or 粢饭 (Cī fàn) is a delicious stuffed rice roll that is popular in Taiwan and Shanghai. <br> It is often eaten as a breakfast or lunch on-the-go and typically serves with a warm bowl of soymilk.
         </p>
 
