--- a/recipes/yakisoba.html
+++ b/recipes/yakisoba.html
@@ -3,19 +3,19 @@
     <head>
         <meta charset="UTF-8">
         <title>Yakisoba</title>
-
+        <link rel="stylesheet" href="styles.css">
     </head>
 
     <body>
-        <a href="../index.html">Back to Home</a>
+        <a class="home" href="../index.html">Back to Home</a>
 
         <!--Link back to homepage-->
         
         <h1>Yakisoba Chicken</h1>
         <img src="../images/yakisoba.png" alt="Yakisoba Chicken" height="300" width="350">
 
-         <h2>Description</h2>
-             <p>
+         <h1>Description</h1>
+             <p class="description">
                 Yakisoba is a classic Japanese stir-fried noodle dish that's seasoned with a sweet and savory sauce similar to Worcestershire sauce. <br> Use any proteins you like—pork, chicken, shrimp, or calamari. For vegetarians, just swap it with tofu or shiitake mushrooms.        </p>     
                 <!--Description of Yakisoba Chicken-->
         <h2>Ingredients</h2>
