--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <title>Recipes</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
+        <h1 class="header">Odin Recipes</h1>
         <ul>
            <li> <a href="recipes/yakisoba.html" rel="noopener noreferrer">Yakisoba Chicken (Japanese)</a></li>
            <li> <a href="recipes/bibimbap.html" rel="noopener noreferrer">Bibimbap (Korean Rice with Mixed Vegetables)</a></li>
